fixed spacing issues in welcome banner

--- a/style.css
+++ b/style.css
@@ -70,14 +70,12 @@ a {
 
 .welcome-banner {
   display: flex;
-  top: 10px;
   background-color: var(--clr-lightestsage);
   width: 100%;
-  height: 35vh;
+  height: 30vh;
   justify-content: flex-start;
   align-items: center;
-  position: static;
-  margin-bottom: 10px;
+  position: sticky;
 }
 
 h1 {
@@ -126,6 +124,7 @@ h1 {
   top: 360px;
   background-color: var(--clr-lightsage);
   margin-bottom: 10px;
+  margin-top: 10px
 }
 
 .a-me {
